Fixed some alignment of inner elements

--- a/src/pages/Layout/Layout.scss
+++ b/src/pages/Layout/Layout.scss
@@ -12,6 +12,7 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   gap: 10%;
 }
@@ -19,14 +20,12 @@
 .Section{
   min-height: 100vh;
   width: 100%;
-  padding-top: 5%;
-  padding-bottom: 5%;
   overflow: hidden;
   width: clamp(300px, 50%, 8000px);
 
   display: flex;
   flex-direction: column;
-  gap: 10%;
+  justify-content: center;
 }
 
 .Introduction{
